samples/_failures_safe/1761617725_df601b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08dae5b1.c: In function ‘main’:
./samples/SAFE/__tmp_08dae5b1.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
